# infobiotics-dashboard

./: .gitignore  .hgignore  .project  .pydevproject  AUTHORS.txt  BUGS.txt  CHANGES.txt  ChangeLog  ChangeLog_mcss  DYLD_PRINT_LIBRARIES_morag.txt  LICENSE.txt  MANIFEST.in  NAME.txt  PyQt4_Qsci.sh  README  README.md  README.txt  THANKS  THANKS.txt  TODO.txt  TODO_Fran.txt  VERSION  VERSION.txt  _build-infobiotics-workbench-apple.sh  _py2exe.bat  _py2exe.sh  bbfreeze.sh  bbfreeze_test.py  bbfreezer.py  build_PyQt4_Qsci.sh  clean.sh  clean_distribute.sh  copyright  dylibs_morag.txt  eintr.patch  epydoc.sh  fix_dylib_paths.py  freeze.py  infobiotics-dashboard.desktop  infobiotics-dashboard.py  (+27 more)
common/: files.py  mayavi.py  sequences.py  strings.py
commons/: api.py  files.py  lists.py  md5sum.py  sequences.py  webbrowsing.py
doc/: endo.sh  epydoc.sh  experiments.txt  html.txt  make-doc.sh  preferences.txt  toolkit.txt  version.txt  versions.txt
enthought/: __init__.py  ets-up.sh  un__init__.py
examples/: clean.sh
examples/libecsb/dataset-example/: ExampleDataset.h  Makefile.am  Makefile.in  README
examples/mcss/api/: Makefile.am  README  api-example-2.cpp  api-example-6.cpp  api-example.cpp
examples/mcss/mcss-cmaes/: Makefile.am  mcss-cmaes-01.build.sh  mcss-cmaes-01.cmaes.params  mcss-cmaes-01.cpp  mcss-cmaes-01.mcss.params  mcss-cmaes-01.sbml  mcss-cmaes-01.target.data
ideas/: Instance_traits.py  context_including_parameters_experiments.py  diamond.py  scripting_interface.py
images/: infobiotics-workbench.xpm
infobiotics/: __init__.py  __version__.py  api.py  experiments.py  freezer_includes.py  preferences.py
new/: preferences.py
old/: TraitedPrismResults.py  pmodelchecker_results_matplotlib.py
py2app/: PyQt4_Qsci.sh  eintr.patch
py2exe/: TODO.txt  boot_common.py  build_exe.py  deps.py
(+1202 files in other folders)
