AM_CPPFLAGS = -I$(top_builddir) -I$(top_srcdir)

EXTRA_DIST = README

noinst_PROGRAMS = api-example api-example-2 api-example-4 api-example-5 api-example-6

api_example_SOURCES = api-example.cpp
api_example_LDADD = $(top_builddir)/mcss/libmcss.la

api_example_2_SOURCES = api-example-2.cpp
api_example_2_LDADD = $(top_builddir)/mcss/libmcss.la

api_example_4_SOURCES = api-example-4.cpp
api_example_4_LDADD = $(top_builddir)/mcss/libmcss.la

api_example_5_SOURCES = api-example-5.cpp
api_example_5_LDADD = $(top_builddir)/mcss/libmcss.la

api_example_6_SOURCES = api-example-6.cpp
api_example_6_LDADD = $(top_builddir)/mcss/libmcss.la
